log
Fri 21 Mar 2025 02:19:16 PM UTC: 
 exercises.c | 30 +++++++++++++++++++-----------
 1 file changed, 19 insertions(+), 11 deletions(-)
 tests:  1|4
total_score: 10/70
3f6cb15
Fri 21 Mar 2025 02:20:36 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
840ba08
Fri 21 Mar 2025 02:20:56 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
e0cc221
Fri 21 Mar 2025 02:26:43 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
0de43e3
Fri 21 Mar 2025 02:36:50 PM UTC: 
 exercises.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  2|3
total_score: 20/70
9ce94e2
Fri 21 Mar 2025 02:38:36 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:84:12: error: unused variable ‘dato’ [-Werror=unused-variable]
   84 |       int *dato = (int*) next(L);
      |            ^~~~
cc1: all warnings being treated as errors
Compilation failed
a693a56
Fri 21 Mar 2025 02:38:44 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
cbd8f4f
